# grafana-agent-k8s-operator

./: .gitignore  CONTRIBUTING.md  INTEGRATING.md  README.md  SECURITY.md  charmcraft.yaml  config.yaml  k8s_metadata.yaml  machine_charmcraft.yaml  machine_metadata.yaml  metadata.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/workflows/: ci.yaml  issues.yaml  issues.yml  promote-machine.yaml  promote.yaml  pull-request.yaml  release-edge.yaml  release-libs.yaml  release.yaml  run_tests.yaml  terraform.yaml  update-libs.yaml
grafana_dashboards/: node-exporter-full.json
k8s/: README.md  charmcraft.yaml  config.yaml  tox.ini
k8s/grafana_dashboards/: node-exporter-full.json
k8s/prometheus_alert_rules/: memory_pressure.rule
k8s/src/: grafana_dashboards
lib/: .wokeignore
machine/: CONTRIBUTING.md  tox.ini
machine/src/: charm.py  grafana_agent.py  loki_alert_rules  prometheus_alert_rules
prometheus_alert_rules/: grafana_agent_request_errors.rule  grafana_agent_request_latency.rule  grafana_agent_unavailable.rule  network.rules  reboot.rules  useful.rules
src/: charm.py  grafana_agent.py  k8s_charm.py  kubernetes_service.py  machine_charm.py
src/grafana_dashboards/: grafana-agent-k8s_rev1.json.tmpl  grafana-agent-node-exporter-quickstart_rev2.json  node-exporter-full.json
src/loki_alert_rules/: high_error_rate.rule
src/prometheus_alert_rules/: .wokeignore  arp_cache.rules  conntrack.rules  disk.rules  grafana_agent_unavailable.rule  high_cpu_iowait.rule  hwmon.rules  mdadm.rules  memory.rules  network.rules  nvme.rule  oomkill.rule  pressure.rules  process.rules  reboot.rules
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
tests/integration/: conftest.py  grafana.py  helpers.py  prometheus.py  test_charm.py  test_forwards_alerts.py  test_juju_info.py  test_kubectl_delete.py  test_upgrade_charm.py
tests/integration-machine/: test_juju_info.py
tests/interface/: conftest.py  test_tracing.py
tests/scenario/: conftest.py  helpers.py  test_config_reporting_enabled.py  test_dashboard_transfer.py  (+4 more)
(+78 files in other folders)
