# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "grafana-agent-k8s"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "ops>=2.5.0",
  "cosl>=0.0.50",
  "pydantic<2",
  "pyyaml",
  "requests",
  "kubernetes",
  "cryptography",
  "lightkube",
  "lightkube-models",
  "jsonschema<4",  # # Pin prevents the machine charm error "ModuleNotFoundError: No module named 'rpds.rpds'"
  "opentelemetry-exporter-otlp-proto-http>=1.21.0"
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "pytest-subtests",
  "coverage[toml]",
  "ops[testing]",
  "deepdiff",
  "fs",
  "toml",
  "responses",
  # Integration
  "juju<=3.3.0,>=3.0",
  "websockets<14.0",  # https://github.com/juju/python-libjuju/issues/1184
  "pytest-operator",
  "prometheus-client",
  "prometheus-api-client",
  "aiohttp!=3.11.13",  # Yanked
  "asyncstdlib",
  "sh",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Linting tools configuration
[tool.ruff]
line-length = 99
exclude = ["__pycache__", "*.egg_info", "prometheus-tester", "loki-tester"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["C901", "E501", "D107", "RET504"]

[tool.ruff.lint.per-file-ignores]
# D100, D101, D102, D103: Ignore missing docstrings in tests
"tests/*" = ["D100","D101","D102","D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Static analysis tools configuration
[tool.pyright]
extraPaths = ["src", "lib"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic" # we'll work up to strict
reportIncompatibleMethodOverride = false
reportImportCycles = false

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"
